# sweeper-scraper

./: .gitignore  README.md  helper.sh  pyproject.toml
sweeperscraper/: sweeperscraper.py
sweeperscraper/data/: Aleksandar_Aleksic.htm  DAXV2.htm  Dejan_Brckalo.htm  Dejan_Vidovic.htm  Dijana_Mitrovic.htm  Dijana_Tadic.htm  Dispecer_prodaja.htm  Dispeceri.htm  Divka_Prodanovic.htm  Divna_Prodanovic.htm  Dragan_Bujic.htm  Dragan_Bunijevac.htm  Dragan_Dimitrijevic.htm  Dragan_Ivanovic.htm  Dragan_Kikic.htm  Dragan_Mitrovic.htm  Dragan_Savic.htm  Dragan_Tanackovic.htm  Dragan_Zivkovic.htm
sweeperscraper/data_all/: ACNLM.htm  Aleksandar_Keser.htm  Aleksandar_Krstic.htm  Aleksandar_Mikanovic.htm  Aleksandar_Orozovic.htm  Aleksandar_Prodanovic.htm  Aleksandar_Sejmenovic.htm  Aleksandra_Kovacevic.htm  Aleksandra_Pajkic.htm  Aleksandra_Tijanic.htm  Alfa.htm  Andrej_Slomovic.htm  Andrija_Bogicevic.htm  Andrijana_Gordeljevic.htm  Anica_Ristanovic.htm  Anja_Pavlovic.htm  Autobazdarenje.htm  Automatika.htm  Biljana_Antonic.htm  Biljana_Djuric.htm  Biljana_Eskic.htm  Biljana_Milovanovic.htm  Biljana_Stojanovic.htm  Bojan_Gojkovic.htm  Bojan_Jaksic.htm  Bojan_Kokotovic.htm  Boris_Andric.htm  Boris_Ilic.htm  Boris_Slavkic.htm  Bozo_Milic.htm  Branislav_Milosevic.htm  Branislav_Ristanovic.htm  Branislava_Kojic.htm  Branko_Lazic.htm  Cvijan_Kostic.htm  DAX.htm  DAXV1.htm  Dalibor_Bojic.htm  Dalibor_Kandic.htm  Dane_Djuricic.htm  (+270 more)
