[tool.poetry]
name = "sweeper-scraper"
version = "0.1.0"
description = "Web scraper for Lansweeper html reports"
authors = ["miroslavvidovic <miroslav-vidovic@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^2.1.0"
dataset = "^1.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
